tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@slice_invalid_start.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/slice_invalid_start.txt
---
error: Slice start must be an integer, got `string`
 --> slice_invalid_start.txt:1:11
  |
1 | {{ numbers[name:] }}
  |            ^^^^
